--- a/src/components/VideoModal.module.css
+++ b/src/components/VideoModal.module.css
@@ -79,6 +79,7 @@
   width: 100%;
   height: 100%;
   border: none;
+  object-fit: cover;
 }
 
 .footer {
